[gd_scene load_steps=10 format=3 uid="uid://dugctreprst23"]

[ext_resource type="Script" path="res://Source/Sonic.gd" id="1_h3dn4"]
[ext_resource type="Texture2D" uid="uid://ckrrxmqiijhkg" path="res://Images/level/generic/plrSonic.png" id="2_g6ucw"]
[ext_resource type="AudioStream" uid="uid://bvawxf6d27abi" path="res://Audio/SFX/jump.wav" id="3_m76n1"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t2vj7"]
size = Vector2(19, 39)

[sub_resource type="Animation" id="Animation_x6k2o"]
resource_name = "Idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_dwblu"]
resource_name = "Jump"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [59, 58, 59, 60, 61, 62, 63, 64]
}

[sub_resource type="Animation" id="Animation_y6f1c"]
resource_name = "Running"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [43, 44, 45, 46]
}

[sub_resource type="Animation" id="Animation_xbmf6"]
resource_name = "Walking"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [19, 20, 21, 22, 23, 24, 25, 26]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bsrr4"]
_data = {
"Idle": SubResource("Animation_x6k2o"),
"Jump": SubResource("Animation_dwblu"),
"Running": SubResource("Animation_y6f1c"),
"Walking": SubResource("Animation_xbmf6")
}

[node name="PlayerNodes" type="Node2D"]

[node name="Sonic" type="CharacterBody2D" parent="."]
floor_snap_length = 4.0
platform_floor_layers = 0
script = ExtResource("1_h3dn4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sonic"]
position = Vector2(35.5, 34)
shape = SubResource("RectangleShape2D_t2vj7")

[node name="SonicSpr" type="Sprite2D" parent="Sonic"]
position = Vector2(32, 32)
texture = ExtResource("2_g6ucw")
hframes = 93

[node name="SncAnim" type="AnimationPlayer" parent="Sonic/SonicSpr"]
libraries = {
"": SubResource("AnimationLibrary_bsrr4")
}

[node name="JumpSFX" type="AudioStreamPlayer" parent="Sonic"]
stream = ExtResource("3_m76n1")
